<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_toolbar_admin"
        app:title="@string/panel_admin"
        app:titleCentered="true"
        app:titleTextColor="@android:color/black"
        app:navigationIcon="@android:drawable/ic_menu_manage"
        app:layout_scrollFlags="scroll|enterAlways"
        app:backgroundTint="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal">

        <!-- CREAR -->
        <Button
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_receta"
            android:layout_marginVertical="8dp"
            style="?attr/materialButtonOutlinedStyle"
            app:icon="@android:drawable/ic_input_add"
            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:cornerRadius="12dp" />

        <!-- EDITAR -->
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_recetas"
            android:layout_marginVertical="8dp"
            style="?attr/materialButtonOutlinedStyle"
            app:icon="@android:drawable/ic_menu_edit"
            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:cornerRadius="12dp" />

        <!-- ELIMINAR -->
        <Button
            android:id="@+id/btnEliminar"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/eliminar_recetas"
            app:cornerRadius="12dp"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:iconTint="?attr/colorError" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Volver" />

    </LinearLayout>

</LinearLayout>