<!-- res/layout/activity_main.xml -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="true"
        app:title="QueCookBook+"
        app:titleTextColor="@android:color/black" />


    <HorizontalScrollView
        android:id="@+id/scrollChips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:selectionRequired="false"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_todas" />

            <com.google.android.material.chip.Chip
                style="@style/App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_postres" />

            <com.google.android.material.chip.Chip
                style="@style/App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_rapidas" />

            <com.google.android.material.chip.Chip
                style="@style/App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_veggie" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:queryHint="@string/buscar_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardDestacado"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollChips">

        <ImageButton
            android:id="@+id/btnPanConQueso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pcq" />
    </com.google.android.material.card.MaterialCardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecetas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardDestacado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="6"
        tools:listitem="@layout/item_recipe_card" />
</androidx.constraintlayout.widget.ConstraintLayout>