<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:contentDescription="@string/cd_portada_receta"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/pcq"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:textStyle="bold"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/imgHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Nombre Receta " />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsMeta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTiempo"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30 min" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPorciones"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Porciones: 5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDificultad"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Fácil" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvIngredientesTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/section_ingredientes"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textStyle="bold"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/chipsMeta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvIngredientesTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:itemCount="6" />

        <TextView
            android:id="@+id/tvPasosTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/section_preparacion"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textStyle="bold"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/rvIngredientes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPasos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPasosTitulo"
            tools:itemCount="5"
            tools:listitem="@layout/item_step" />

        <Button
            android:id="@+id/btnVolverReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.981" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>